--- a/app/src/main/res/layout/fragment_wine.xml
+++ b/app/src/main/res/layout/fragment_wine.xml
@@ -4,9 +4,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <EditText
-        android:id = "@+id/beverage_title"
+
+    <TextView
+        android:id = "@+id/list_beverage_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/beverage_title_label"
+        android:textStyle="bold"
+        android:padding="4dp"/>
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+        <TextView
+            android:id = "@+id/list_id_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/id_label"
+
+            android:padding="4dp"/>
+
+        <TextView
+            android:id = "@+id/list_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/price_label"
+
+            android:layout_alignParentRight="true"
+
+            android:padding="4dp"/>
+        
+    </RelativeLayout>
+
+
+
+
 
 </LinearLayout>
