--- a/app/src/main/res/layout/fragment_beverage.xml
+++ b/app/src/main/res/layout/fragment_beverage.xml
@@ -29,15 +29,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/price_label"
-
             android:layout_alignParentRight="true"
 
             android:padding="4dp"/>
-        
+
+            <View
+                android:layout_alignBottom="@+id/list_price"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray"/>
+
     </RelativeLayout>
-
-
-
-
-
 </LinearLayout>
