--- a/app/src/main/res/layout/fragment_beverage_details.xml
+++ b/app/src/main/res/layout/fragment_beverage_details.xml
@@ -5,33 +5,88 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <TextView
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:text="@string/beverage_title_label"
         />
     <EditText
+        android:textStyle="bold"
         android:id = "@+id/beverage_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-    <EditText
-        android:id = "@+id/id_num"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/id_label"/>
-    <EditText
-        android:id = "@+id/pack"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/pack_label"/>
-    <EditText
-        android:id = "@+id/price"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/price_label"/>
-    <CheckBox
-        android:id = "@+id/active"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/active_label"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:paddingRight="135dp"
+            android:text="@string/id_label"/>
+        <EditText
+            android:id = "@+id/id_num"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="@string/id_label"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:paddingRight="110dp"
+            android:text="@string/pack_label"/>
+
+        <EditText
+            android:id = "@+id/pack"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/pack_label"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:paddingRight="110dp"
+            android:text="@string/price_label"/>
+        <EditText
+            android:id = "@+id/price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/price_label"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:paddingRight="140dp"
+            android:text="@string/active_label"/>
+
+        <CheckBox
+            android:id = "@+id/active"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+    </LinearLayout>
 </LinearLayout>
