--- a/app/src/main/res/layout/fragment_beverage_details.xml
+++ b/app/src/main/res/layout/fragment_beverage_details.xml
@@ -33,9 +33,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="@string/id_label"/>
+            android:text="@string/id_label"
+            android:textColor="@android:color/black"
+            android:enabled="false"/>
 
     </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
